# UAEF

./: .env.example  .gitignore  BUGFIX_SUMMARY.md  CLAUDE.md  FINAL_IMPLEMENTATION_SUMMARY.md  FINAL_STATUS.md  GETTING_STARTED.md  IMPLEMENTATION_STATUS.md  INDEX.md  PROGRESS_SUMMARY.md  PROJECT_STATUS.md  README.md  RELEASE_CHECKLIST.md  SESSION_COMPLETE.md  SESSION_CONTEXT.md  TEST_REPORT.md  TEST_STATUS_COMPACT.md  UAEF_Implementation_Plan.md  alembic.ini  generate_migration.py  pyproject.toml  pytest.ini  run_demo.py  update_imports.py
.claude/: settings.local.json
cockpit/: README.md  api.py  dashboard.html
examples/: advanced_workflows.py  simple_workflow_demo.py  test_live_agent.py  view_workflow_status.py  workflow_monitor.py
functions/: README.md  requirements.txt  scheduled_workflow.py  template.yaml  webhook_receiver.py  workflow_trigger.py
migrations/: env.py
migrations/versions/: 001_initial_schema.py  002_add_settlement_tables.py  496c92a03b4e_add_platform_agnostic_agent_models_and_.py
src/uaef/: __init__.py
src/uaef/agents/: __init__.py  agents.py  models.py  workflow.py
src/uaef/agents/adapters/: __init__.py  base.py  claude.py  factory.py
src/uaef/core/: __init__.py  config.py  database.py  logging.py  security.py
src/uaef/interop/: __init__.py
src/uaef/interop/connectors/: __init__.py  base.py  erp.py  queue.py  webhook.py
src/uaef/ledger/: __init__.py  compliance.py  events.py  models.py  verification.py
src/uaef/orchestration/: __init__.py  agents.py  models.py  workflow.py
src/uaef/settlement/: __init__.py  models.py  service.py
tests/: __init__.py  conftest.py  test_agents.py  test_integration.py  test_ledger_events.py  test_security.py  test_system_integration.py  test_workflow.py
